<resources>
    <string name="app_name">My High Scores</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_new_score">NewScore</string>

    <!-- Main Activity -->

    <string name="searchHint">Suche nach Spielenamen</string>

    <!-- New game -->

    <string name="new_game">Neues Spiel</string>
    <string name="name_of_game">Spiel Name</string>
    <string name="help_new_game">Sie können entweder sofort eine Punktezahl eingeben, oder später, indem Sie im Hauptfenster
    ein Spiel auswählen.</string>
    <string name="add_score">Spiel speichern. Punkte eintragen</string>

    <!-- Action bar -->
    <string name="search">Suche nach Spielenamen...</string>
    <string name="action_settings">Info</string>
    <string name="action_sort">Sortiere auf-/absteigend</string>


    <!-- New score -->

    <string name="score">Punkte</string>
    <string name="comment">Schwierigkeitsgrad, Rank, Level....</string>
    <string name="evaluation">Bewertung: Profi, looser etc...</string>
    <string name="camara_help">Antippen um einen screenshoot mit der Kamera aufzunehmen.</string>
    <string name="get_existig_screenshoot">Screenshoot aus Datei wählen</string>

    <!-- Game list -->

    <string name="add_score_for_first_time">Play me, add a score :-)</string>
    <!-- List scores of one game -->

    <string name="score_for_game">Alle Scores für:</string>

    <!-- Delete game -->

    <string name="delete_game"></string>
    <string name="yesNo">wollen Sie dieses Spiel und alle Punkte die dafür eingetragen sind  wirklich löschen?</string>
    <string name="yes">löschen</string>
    <string name="no">nicht löschen</string>
    <string name="showingSelection">Gefilterte Ansicht! Sie sehen Spielenamen passend zu:</string>
    <string name="showingAll">Alle Spiele.</string>
    <string name="nothingToShow">Keine Einträge</string>

    <!-- About -->

    <string name="info">Berthold Fritz 2016</string>
    <string name="licence"> Sie dürfen diese App frei nutzen und weitergeben. Der Komerzielle
                            Vertrieb wird hiermit untersagt</string>
    <string name="title_activity_settings">Settings</string>

    <string name="cc_by">This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
    https://creativecommons.org/licenses/by-nc-sa/4.0/</string>

    <string name="databaseInfo">Inhalt:</string>

    <!-- Game list entry in main activity -->

    <string name="your_highscore">Keine Highscore eingetragen</string>
    <string name="date_played">Datum?</string>
    <string name="not_found">Keine passenden Einträge gefunden...</string>
    <string name="end_of_list">Ende der Liste....</string>

    <!-- Delete Score -->

    <string name="reallyDeleteScore">Diesen Punktestand wirklich löschen?</string>

    <!-- Toast's -->

    <string name="dbloaded"> Datenbank geladen...</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
