<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ activity_new_score.xml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 1/6/18 8:45 PM
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.berthold.highscore.NewScoreV2">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/score"
            android:paddingTop="80dp"
            android:hint="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/kamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/no_picture_taken_yet"
            android:layout_below="@+id/score" />

        <ImageView
            android:id="@+id/camicon"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@android:drawable/ic_menu_camera"/>

        <TextView
            android:id="@+id/help"
            android:layout_below="@+id/camicon"
            android:layout_centerHorizontal="true"
            android:text="@string/camara_help"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/getscreenshootfromfile"
            android:layout_below="@+id/kamera"
            android:text="@string/get_existig_screenshoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/comment"
            android:paddingTop="20dp"
            android:layout_below="@+id/getscreenshootfromfile"
            android:hint="@string/comment"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/evaluation"
            android:paddingTop="20dp"
            android:layout_below="@+id/comment"
            android:hint="@string/evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            app:srcCompat="@android:drawable/ic_menu_save"
            app:backgroundTint="@android:color/holo_blue_bright" />

</android.support.design.widget.CoordinatorLayout>
